[gd_scene load_steps=3 format=3 uid="uid://v0lagbt3rsfk"]

[ext_resource type="Script" uid="uid://toyek80kp6cm" path="res://qi_ball.gd" id="1_5xxeq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3wik8"]
radius = 50.0

[node name="Area2D" type="Area2D"]
script = ExtResource("1_5xxeq")

[node name="Octogan" type="Polygon2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.3, 1.3)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -10, -7, -7, -10, 0, -7, 7, 0, 10, 7, 7, 10, 0, 7, -7)

[node name="Polygon2D" type="Polygon2D" parent="Octogan"]
scale = Vector2(0.7, 0.7)
polygon = PackedVector2Array(0, -10, -7, -7, -10, 0, -7, 7, 0, 10, 7, 7, 10, 0, 7, -7)

[node name="Grab_Area" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_3wik8")

[node name="exp_amount_text" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -14.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0.552941, 0.0980392, 0.843137, 1)
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
